[gd_scene load_steps=42 format=3 uid="uid://lu1dhmwso71h"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_mksdi"]
[ext_resource type="Texture2D" uid="uid://diff8hr0r13v6" path="res://Sprites/ScareTreeSprite.png" id="1_o61rc"]
[ext_resource type="PackedScene" uid="uid://b1tvxxq6u4kxp" path="res://Scenes/damage_box.tscn" id="3_mefmp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ejfhg"]
atlas = ExtResource("1_o61rc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q6aj"]
atlas = ExtResource("1_o61rc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uav4k"]
atlas = ExtResource("1_o61rc")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh57p"]
atlas = ExtResource("1_o61rc")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_776y8"]
atlas = ExtResource("1_o61rc")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2wwc"]
atlas = ExtResource("1_o61rc")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndkp0"]
atlas = ExtResource("1_o61rc")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogd8c"]
atlas = ExtResource("1_o61rc")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owxrv"]
atlas = ExtResource("1_o61rc")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gscv7"]
atlas = ExtResource("1_o61rc")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xa5d"]
atlas = ExtResource("1_o61rc")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04hw4"]
atlas = ExtResource("1_o61rc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trtb7"]
atlas = ExtResource("1_o61rc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okuiw"]
atlas = ExtResource("1_o61rc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsxf0"]
atlas = ExtResource("1_o61rc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_halrc"]
atlas = ExtResource("1_o61rc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvvt0"]
atlas = ExtResource("1_o61rc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t64s"]
atlas = ExtResource("1_o61rc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj2la"]
atlas = ExtResource("1_o61rc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfdl8"]
atlas = ExtResource("1_o61rc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1dfx"]
atlas = ExtResource("1_o61rc")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdh6q"]
atlas = ExtResource("1_o61rc")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb46w"]
atlas = ExtResource("1_o61rc")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_777o0"]
atlas = ExtResource("1_o61rc")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0108a"]
atlas = ExtResource("1_o61rc")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbabr"]
atlas = ExtResource("1_o61rc")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiq3h"]
atlas = ExtResource("1_o61rc")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qtb0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejfhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q6aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uav4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh57p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_776y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2wwc")
}],
"loop": false,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndkp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogd8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owxrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gscv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xa5d")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04hw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trtb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okuiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsxf0")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_halrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvvt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t64s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj2la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_halrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvvt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t64s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj2la")
}],
"loop": false,
"name": &"Recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfdl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1dfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdh6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb46w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_777o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0108a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbabr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiq3h")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4dw21"]
radius = 1.77778
height = 4.88889

[sub_resource type="Animation" id="Animation_t0hsw"]
resource_name = "Attack"
length = 0.75
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_1t7pl"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0o06h"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cie21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tucl1"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ko5wt"]
resource_name = "Run"
length = 1.14286
loop_mode = 1
step = 0.135
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kjolf"]
_data = {
"Attack": SubResource("Animation_t0hsw"),
"Death": SubResource("Animation_1t7pl"),
"Idle": SubResource("Animation_0o06h"),
"RESET": SubResource("Animation_cie21"),
"Recover": SubResource("Animation_tucl1"),
"Run": SubResource("Animation_ko5wt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cxgg"]
size = Vector2(9.5, 17.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0aio"]
size = Vector2(9.66667, 17.6667)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
script = ExtResource("1_mksdi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.333333, -10)
sprite_frames = SubResource("SpriteFrames_qtb0v")
animation = &"Death"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.33333)
scale = Vector2(3, 3)
shape = SubResource("CapsuleShape2D_4dw21")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kjolf")
}
autoplay = "Idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(10.5833, -2.83333)
shape = SubResource("RectangleShape2D_7cxgg")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("3_mefmp")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(0.333333, -1)

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(10.5, -2.83333)
shape = SubResource("RectangleShape2D_x0aio")

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]

[editable path="AttackDirection/DamageBox"]
